docs/0.14/_sources/api/gammapy.modeling.models.ShellSpatialModel.rst.txt
ShellSpatialModel
=================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ShellSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ShellSpatialModel.evaluation_radius
      ~ShellSpatialModel.frame
      ~ShellSpatialModel.lat_0
      ~ShellSpatialModel.lon_0
      ~ShellSpatialModel.parameters
      ~ShellSpatialModel.position
      ~ShellSpatialModel.radius
      ~ShellSpatialModel.tag
      ~ShellSpatialModel.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~ShellSpatialModel.__call__
      ~ShellSpatialModel.copy
      ~ShellSpatialModel.create
      ~ShellSpatialModel.evaluate
      ~ShellSpatialModel.evaluate_geom
      ~ShellSpatialModel.from_dict
      ~ShellSpatialModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: radius
   .. autoattribute:: tag
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: to_dict
